--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-router-dom": "^7.8.1",
     "react-select": "^5.10.2",
     "react-spinners": "^0.17.0",
+    "tailwind-scrollbar": "^4.0.2",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
